Fix Deprecations (#3868)