@@ -95,7 +95,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertThat(dObj.getName()).isEqualTo("DoubleTest");
         assertThat(dObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:double");
         assertThat(dObj.getValue()).isInstanceOf(Double.class);
-        assertThat(dObj.getValue()).isEqualTo(new Double(123456789));
+        assertThat(dObj.getValue()).isEqualTo(Double.valueOf(123456789));
       } else if ("dObj5".equals(dObj.getId())) {
         assertThat(dObj.getClass()).isEqualTo(IntegerDataObject.class);
         assertThat(dObj.getName()).isEqualTo("IntegerTest");
@@ -107,7 +107,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertThat(dObj.getName()).isEqualTo("LongTest");
         assertThat(dObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:long");
         assertThat(dObj.getValue()).isInstanceOf(Long.class);
-        assertThat(dObj.getValue()).isEqualTo(new Long(-123456));
+        assertThat(dObj.getValue()).isEqualTo(Long.valueOf(-123456));
       }
     }
 
@@ -149,7 +149,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertThat(dObj.getName()).isEqualTo("SubDoubleTest");
         assertThat(dObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:double");
         assertThat(dObj.getValue()).isInstanceOf(Double.class);
-        assertThat(dObj.getValue()).isEqualTo(new Double(678912345));
+        assertThat(dObj.getValue()).isEqualTo(Double.valueOf(678912345));
       } else if ("dObj5".equals(dObj.getId())) {
         assertThat(dObj.getClass()).isEqualTo(IntegerDataObject.class);
         assertThat(dObj.getName()).isEqualTo("SubIntegerTest");
@@ -161,7 +161,7 @@ public class ValuedDataObjectConverterTest extends AbstractConverterTest {
         assertThat(dObj.getName()).isEqualTo("SubLongTest");
         assertThat(dObj.getItemSubjectRef().getStructureRef()).isEqualTo("xsd:long");
         assertThat(dObj.getValue()).isInstanceOf(Long.class);
-        assertThat(dObj.getValue()).isEqualTo(new Long(456123));
+        assertThat(dObj.getValue()).isEqualTo(Long.valueOf(456123));
         assertThat(dObj.getExtensionElements()).hasSize(1);
       }
     }
